--- a/gmall-manager-web/src/main/resources/templates/spuListPage.html
+++ b/gmall-manager-web/src/main/resources/templates/spuListPage.html
@@ -63,7 +63,7 @@
 <!--引入页面 th:thymeleaf-->
 <div th:include="spuInfoPage"></div>
 
-<!--<div th:include="skuInfoPage"></div>-->
+<div th:include="skuInfoPage"></div>
 
 <!--<div th:include="skuListPage"></div>-->
 </body>
@@ -71,6 +71,13 @@
 <script type="text/javascript">
     function addSpuInfo(){
         initSpuInfoDlg();  //在spuInfoPage.html中
+    }
+    /*添加sku*/
+    function addSkuInfo() {
+        var spuRow = $('#spulist_dg').datagrid('getSelected');
+        var ctg3val=$("#ctg3ForSpuList").combobox('getValue');
+        /**/
+        initSkuInfoDlg(spuRow.id,'',ctg3val);//在skuInfoPage.html中
     }
 </script>
 </html>
